Fix cards with logos cutting off issue

--- a/tweaks.css
+++ b/tweaks.css
@@ -335,3 +335,9 @@ background: rgba(0, 0, 0, 0);
 		position: relative !important;
     }
 }
+
+/* Display logos correctly */
+
+.cardScalable > a[style*="Logo"] {
+	background-size: contain !important;
+}
